Fix overflow in mobile device

--- a/nav-bar.css
+++ b/nav-bar.css
@@ -156,17 +156,3 @@
         transition: 0.3s ease-in-out;
     }
 }
-.name-container {
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    margin-block: 20vh;
-    margin-bottom: 70vh;
-    margin-inline: auto ;
-    border-radius: 12px;
-    padding: 3em;
-    width: max(50vw, 250px);
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    backdrop-filter: blur(5px);
-}
