--- a/style.css
+++ b/style.css
@@ -24,11 +24,26 @@ body {
 .name {
     display: flex;
     flex-direction: column;
-    width: 10em;
+    width: 12em;
     margin-block: auto;
     font-size: max(3vw, 24px);
     font-weight: bolder;
     color: antiquewhite;
+}
+
+.name-container {
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    margin-block: 20vh;
+    margin-bottom: 70vh;
+    margin-inline: auto;
+    border-radius: 12px;
+    padding: 3em;
+    width: fit-content;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(5px);
 }
 
 .role {
@@ -127,18 +142,19 @@ body {
     position: absolute;
     filter: drop-shadow(0 0 3px red);
     height: 50px;
+    width: 50px;
     z-index: 2;
     transition: 0.3s ease-in-out;
 }
 
-.ai-cv p{
+.ai-cv .description-card p{
     width: auto;
-    margin: 20px;
+    margin: 5%;
     text-align: center;
     font-family:"Josefin Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
-    font-size: large;
+    font-size: 1vw;
     color: antiquewhite;
 }
 
@@ -172,6 +188,7 @@ body {
 }
 
 .description-card{
+    width: auto;
     border-radius: 12px;
     margin: 25px;
     margin-left: 0px;
@@ -193,16 +210,11 @@ body {
     place-items: center;
     background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 4px 1px rgba(250, 235, 215, 0.4);
+    box-shadow: -3px -3px 10px 0px rgba(250, 235, 215, 0.4);
     margin: auto;
     margin-left: 12px;
     margin-bottom: 12px;
     border-radius: 8px;
-    transition: 0.3s ease-in-out;
-}
-
-.description-card:hover .see-more{
-    transform: scale(120%) translate3d(10px, -20px, 0px);
     transition: 0.3s ease-in-out;
 }
 
@@ -215,11 +227,6 @@ body {
 }
 
 @media all and (max-width: 800px){
-    body{
-        overflow-inline: hidden;
-        width: 100vw;
-    }
-
     .ai-cv{
         width: 85vw;
         margin: auto;
@@ -232,34 +239,17 @@ body {
         margin: 20px;
     }
 
+    .ai-cv .description-card p{
+        font-size: large;
+    }
+
     .ai-cv .img-container{
         width: auto;
     }
-
-    .ai-cv:hover{
-        transform: scale(105%) translate3d(10px, -20px, 0px);
-        transition: 0.3s ease-in-out;
-    }
-
-    .ai-cv:hover .img-container {
-        transform: scale(105%) translate3d(0px, -20px, 0px);
-        box-shadow: 0px 0px 50px 10px rgba(250, 235, 215, 0.2);
-        transition: 0.3s ease-in-out;
-    }
-
-    .ai-cv .img-container:hover .vid{
-        filter: blur(5px) brightness(50%);
-        transition: 0.3s ease-in-out;
-    }
-
-    .ai-cv:hover .description-card {
-        transform: scale(105%) translate3d(0px, -20px, 0px);
-        box-shadow: 0px 0px 50px 10px rgba(250, 235, 215, 0.2);
-        transition: 0.3s ease-in-out;
-    }
     
     .name-container{
-        margin-inline: 10px;
-        padding: 10px;
+        justify-content: center;
+        padding: 3em;
+        transition: 0.3s ease-in-out;
     }
 }
